[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameHUDRelated/RelicBuyEtcPanel/RelicBuyEtcButton_Violet_Normal.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/BuySellPanel/AdditionalIcons/AbsorbAddIcon_20x20.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RelicBuyEtcPanel/RelicBuyEtcPanel.gd" type="Script" id=3]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButtonWithTooltip.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameHUDRelated/BuySellPanel/RelicPic.png" type="Texture" id=6]
[ext_resource path="res://GameHUDRelated/RelicBuyEtcPanel/RelicBuyEtcButton_Green_Normal.png" type="Texture" id=7]
[ext_resource path="res://GameHUDRelated/RelicBuyEtcPanel/RelicBuyEtcButton_Violet_Highlighted.png" type="Texture" id=8]
[ext_resource path="res://GameHUDRelated/BuySellPanel/AdditionalIcons/TowerAddIcon_20x20.png" type="Texture" id=9]
[ext_resource path="res://GameHUDRelated/RelicBuyEtcPanel/RelicBuyEtcButton_Green_Highlighted.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[node name="RelicBuyEtcPanel" type="MarginContainer"]
margin_right = 104.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 104.0
margin_bottom = 80.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TowerLimitPanel" type="MarginContainer" parent="VBoxContainer"]
margin_right = 104.0
margin_bottom = 40.0
mouse_filter = 2

[node name="TowerLimitButton" parent="VBoxContainer/TowerLimitPanel" instance=ExtResource( 5 )]
margin_right = 104.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 10 )
about_button_index_trigger = -1001
define_tooltip_construction_in_button = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TowerLimitPanel"]
margin_right = 104.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 5

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TowerLimitPanel/HBoxContainer"]
margin_right = 30.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_left = 8

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TowerLimitPanel/HBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 10.0
margin_right = 28.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 9 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/TowerLimitPanel/HBoxContainer"]
margin_left = 35.0
margin_right = 73.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_left = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TowerLimitPanel/HBoxContainer/Marginer"]
margin_right = 36.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/TowerLimitPanel/HBoxContainer/Marginer/HBoxContainer"]
margin_top = 14.0
margin_right = 6.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Label2" type="Label" parent="VBoxContainer/TowerLimitPanel/HBoxContainer/Marginer/HBoxContainer"]
margin_left = 6.0
margin_top = 7.0
margin_right = 36.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "Tower
Limit"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TowerLimitPanel/HBoxContainer"]
margin_left = 78.0
margin_right = 97.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TowerLimitPanel/HBoxContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 13.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6

[node name="Icon" type="TextureRect" parent="VBoxContainer/TowerLimitPanel/HBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 13.0
margin_bottom = 13.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/TowerLimitPanel/HBoxContainer/HBoxContainer"]
margin_left = 13.0
margin_right = 19.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 0

[node name="TowerLimitRelicCostLabel" type="Label" parent="VBoxContainer/TowerLimitPanel/HBoxContainer/HBoxContainer/MarginContainer2"]
margin_top = 14.0
margin_right = 6.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="TowerIngCapPanel" type="MarginContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 104.0
margin_bottom = 80.0
mouse_filter = 2

[node name="IngCapButton" parent="VBoxContainer/TowerIngCapPanel" instance=ExtResource( 5 )]
margin_right = 104.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 8 )
about_button_index_trigger = -1001
define_tooltip_construction_in_button = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TowerIngCapPanel"]
margin_right = 104.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2"]
margin_right = 30.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_left = 8

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2/MarginContainer"]
margin_left = 8.0
margin_top = 10.0
margin_right = 28.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 2 )

[node name="Marginer" type="MarginContainer" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2"]
margin_left = 33.0
margin_right = 75.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_left = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2/Marginer"]
margin_right = 42.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2/Marginer/HBoxContainer"]
margin_top = 14.0
margin_right = 6.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Label2" type="Label" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2/Marginer/HBoxContainer"]
margin_left = 6.0
margin_top = 7.0
margin_right = 42.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "Absorb
Limit"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2"]
margin_left = 78.0
margin_right = 97.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2/HBoxContainer"]
margin_top = 13.0
margin_right = 13.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6

[node name="Icon" type="TextureRect" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2/HBoxContainer/MarginContainer"]
margin_right = 13.0
margin_bottom = 13.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2/HBoxContainer"]
margin_left = 13.0
margin_right = 19.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 0

[node name="IngCapRelicCostLabel" type="Label" parent="VBoxContainer/TowerIngCapPanel/HBoxContainer2/HBoxContainer/MarginContainer2"]
margin_top = 14.0
margin_right = 6.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"

[connection signal="about_tooltip_construction_requested" from="VBoxContainer/TowerLimitPanel/TowerLimitButton" to="." method="_on_TowerLimitButton_about_tooltip_construction_requested"]
[connection signal="pressed_mouse_event" from="VBoxContainer/TowerLimitPanel/TowerLimitButton" to="." method="_on_TowerLimitButton_pressed_mouse_event"]
[connection signal="about_tooltip_construction_requested" from="VBoxContainer/TowerIngCapPanel/IngCapButton" to="." method="_on_IngCapButton_about_tooltip_construction_requested"]
[connection signal="pressed_mouse_event" from="VBoxContainer/TowerIngCapPanel/IngCapButton" to="." method="_on_IngCapButton_pressed_mouse_event"]
